[package]
name = "mpl-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
std_log = { version = "0.4.14", package = "log" }
mpl-core = { version = "0.4.0" }
tokio = { version = "1.36.0", features = ["full"] }
assert_matches = "1.5.0"
solana-program-test = "^1.14"
solana-sdk = { version = "^1.14", features = ["full"] }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.8.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = [
    "no-entrypoint",
] }
solana-program = "^1.14"
solana-logger = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = { version = "0.11.14" }
